# pucc-niuc

./: .coverage  .gitignore  ABSTRACT.md  ATTACK_BENIGN_RESEARCH_SECTION.md  ATTACK_VS_BENIGN_EXPLANATION.md  BENCHMARK_JUSTIFICATION.md  CONCLUSION.md  DISCUSSION.md  FINAL_DATASET_STATUS.md  GITHUB_SETUP.md  GITHUB_UPDATE_SUMMARY.md  HYDRA_BENCH_500_SUMMARY.md  HYDRA_BENCH_COMPLETION.md  HYDRA_BENCH_RESEARCH_SUMMARY.md  HYDRA_BENCH_SPECIFICATION.md  INTRODUCTION.md  LIVE_DEMO.md  LIVE_DEMO_SCRIPT.md  METHODS.md  MODEL_TESTING_GUIDE.txt  PAPER.html  PAPER.md  PAPER_UPDATES_SUMMARY.md  README.md  RED_TEAM_CHECKLIST.md  REFERENCE_CLEANUP_COMPLETE.md  RELATED_WORK.md  RESULTS.md  SECURITY.md  SECURITY_OPTIMIZATION_SUMMARY.md  UPDATE_SUMMARY_500.md  benchmark_report.md  benchmark_results.csv  coverage.xml  debug_api_errors.py  generate_100_scenarios.py  generate_60_scenarios.py  multi_model_benchmark.py  pyproject.toml  quick_10_scenario_test.py  (+4 more)
.cursor/rules/: pcc.md
bench/: __init__.py  ablate.py  hydra_bench_365.jsonl  scenarios.jsonl  score.py
demo/: __init__.py  demo_cli.py  model_wrapper.py
docs/: certificate-spec.md  lit_review.md  review.md  spec-niuc.md  threat-model.md
paper/: README.md  abstract.tex  content.tex  content_simple.tex  main.tex  main_simple.tex  refs.bib
pcc/: __init__.py  certificate.py  checker.py  imperative_grammar.py  normalizer.py  provenance.py  rewrite.py  runtime_gate.py
results/: ablation_report.md  metrics_claude_benchmark.csv  metrics_final_optimized.csv  metrics_fpr_improved.csv  metrics_hydra_500_production.csv  metrics_hydra_bench_initial.csv  metrics_hydra_bench_production.csv  metrics_research_run.csv  metrics_security_baseline.csv  metrics_test_run.csv  multi_model_summary_1756624667.csv  multi_model_summary_1756630307.csv  multi_model_summary_1756633205.csv  multi_model_summary_1756636451.csv  summary_claude_benchmark.md  summary_final_optimized.md  summary_fpr_improved.md  summary_hydra_500_production.md  summary_hydra_bench_initial.md  summary_hydra_bench_production.md  summary_research_run.md  summary_security_baseline.md  summary_test_run.md
scripts/: README.md  repro.ps1  repro.sh  run_benchmarks.py  smoke_test.py
tests/: __init__.py  test_checker.py  test_niuc_minimal.py  test_normalizer.py  test_runtime_gate.py  test_security_improvements.py
